# Primitive

./: .gitignore  Anchor.toml  README.md  craco.config.js  package-lock.json  package.json  tailwind.config.js
programs/primitive_protocol/: Cargo.toml
programs/primitive_protocol/src/: lib.rs
scripts/: deploy.ts
src/: App.tsx  index.css  setupTests.ts
src/components/: CustomWalletButton.tsx  Dashboard.tsx  EnhancedProtocolMetrics.tsx  ProtocolMetrics.tsx  RealWalletMetrics.tsx  StakingPanel.tsx  UserProfile.tsx  YieldOpportunities.tsx
src/components/__tests__/: CustomWalletButton.test.tsx  Dashboard.test.tsx
src/idl/: primitive_protocol.ts
src/services/: jupiter-service.ts  protocol-client.ts  real-time-metrics.ts  real-time-user-wallet.ts  real-wallet-metrics.ts  rpc-fallback.ts
tests/: primitive-protocol.ts
